<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <com.ee.grzesiaj.grafikaprojekt1.common.ShowView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/translationLeft"
            android:id="@+id/left"
            android:clickable="true"
            android:singleLine="false"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/translationUp"
            android:layout_weight="1"
            android:id="@+id/up" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/translationForward"
            android:layout_weight="1"
            android:textSize="10sp"
            android:id="@+id/forward" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/translationBackward"
            android:textSize="10sp"
            android:layout_weight="1"
            android:id="@+id/backward" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/translationDown"
            android:layout_weight="1"
            android:textSize="10sp"
            android:id="@+id/down" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/translationRight"
            android:layout_weight="1"
            android:id="@+id/right" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/obracanieLeft"
            android:id="@+id/button"
            android:clickable="true"
            android:singleLine="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/przechylLewo"
            android:textSize="7sp"
            android:layout_weight="1"
            android:id="@+id/button2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/obrocUp"
            android:layout_weight="1"
            android:textSize="10sp"
            android:id="@+id/button3" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ObrocDown"
            android:textSize="10sp"
            android:layout_weight="1"
            android:id="@+id/button4" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/przechylPrawo"
            android:textSize="7sp"
            android:layout_weight="1"
            android:id="@+id/button5" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ObrocPrawo"
            android:layout_weight="1"
            android:id="@+id/button6" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Przybliżenie"
        android:id="@+id/textView2"
        android:layout_above="@+id/linearLayout3"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/linearLayout3"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zoomin"
            android:id="@+id/zoom1"
            android:clickable="true"
            android:singleLine="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zoomout"
            android:layout_weight="1"
            android:id="@+id/zoom2" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Obracanie"
        android:id="@+id/textView"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Translacja"
        android:id="@+id/textView3"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
